rename input, name now is 'photo' before 'file'

--- a/www/html/test-app/templates/LoadImages/loadImages.html.twig
+++ b/www/html/test-app/templates/LoadImages/loadImages.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <form action="/save_photos" class="dropzone" method="POST" id="dropzoneFrom">
         <div class="fallback">
-            <input name="file" type="file" multiple id="archivos">
+            <input name="photos" type="file" multiple id="archivos">
         </div>
     </form>
     <button type="submit" class="btn btn-dark" id="clear-photos-btn">Clear photos</button>
