--- a/www/html/test-app/templates/base.html.twig
+++ b/www/html/test-app/templates/base.html.twig
@@ -13,7 +13,24 @@
 
     </head>
     <body>
-        <h1 id="title">Load your photos</h1>
+        {# <h1 id="title">Load your photos</h1> #}
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#" id="load-imagen-btn">Load Imagen</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#" id="edit-imagen-btn">Edit Imagen</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
         {% block body %}
         
