--- a/www/html/test-app/templates/base.html.twig
+++ b/www/html/test-app/templates/base.html.twig
@@ -16,7 +16,7 @@
         {# <h1 id="title">Load your photos</h1> #}
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Rendimiento Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
