--- a/www/html/test-app/templates/base.html.twig
+++ b/www/html/test-app/templates/base.html.twig
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" id="load-imagen-btn">Load Imagen</a>
+                        <a class="nav-link" href="/imagen" id="load-imagen-btn">Load Imagen</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" id="edit-imagen-btn">Edit Imagen</a>
+                        <a class="nav-link" href="/edit-imagen" id="edit-imagen-btn">Edit Imagen</a>
                     </li>
                 </ul>
             </div>
