--- a/www/html/test-app/templates/EditedImages/editedImages.html.twig
+++ b/www/html/test-app/templates/EditedImages/editedImages.html.twig
@@ -17,7 +17,15 @@
                             </button>
                             <div id="image-tag-{{ loop.index }}" class="collapse" aria-labelledby="headingOne" data-parent="#accordion-{{ loop.index }}">
                                 <div class="card-body">
-                                AQUÍ IRAN LOS MARAVILLOSOS TAGS.
+                                    <div class="tags-container" id="tags-container-{{ loop.index }}">
+                                        <span class="badge badge-light">Light</span>
+                                        <span class="badge badge-light">Light</span>
+                                    </div>
+                                    <div class="input-group tags-container-controller">
+                                        <input type="text" class="form-control" placeholder="Add a new tag..." id="input-tag-{{ loop.index }}">
+                                        <div class="input-group-append add-tag-btn" id="add-tag-btn-{{ loop.index }}">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
