update format for add and delete tags

--- a/www/html/test-app/templates/EditedImages/editedImages.html.twig
+++ b/www/html/test-app/templates/EditedImages/editedImages.html.twig
@@ -18,8 +18,9 @@
                             <div id="image-tag-{{ loop.index }}" class="collapse" aria-labelledby="headingOne" data-parent="#accordion-{{ loop.index }}">
                                 <div class="card-body">
                                     <div class="tags-container" id="tags-container-{{ loop.index }}">
-                                        <span class="badge badge-light">Light</span>
-                                        <span class="badge badge-light">Light</span>
+                                        <span class="badge badge-light">Light 
+                                            <div class="delete-tag"></div>
+                                        </span>
                                     </div>
                                     <div class="input-group tags-container-controller">
                                         <input type="text" class="form-control" placeholder="Add a new tag..." id="input-tag-{{ loop.index }}">
