--- a/www/html/test-app/assets/css/styles.css
+++ b/www/html/test-app/assets/css/styles.css
@@ -31,3 +31,15 @@
 .add-tag-btn:active{
     width: 30px;    height: 30px;
 }
+
+.delete-tag{
+    margin-left: 4px;
+    width: 8px; height: 8px;
+    display: inline-block;
+    background-image: url("https://img.icons8.com/ios/16/000000/cancel.png");
+    background-position: center;
+}
+
+.delete-tag:hover{
+    cursor: pointer;
+}
