add trace for show image collection

--- a/www/html/test-app/templates/EditedImages/editedImages.html.twig
+++ b/www/html/test-app/templates/EditedImages/editedImages.html.twig
@@ -3,6 +3,7 @@
 {% block stylesheets %} {{ parent() }} {% endblock %}
 
 {% block body %}
+    {{ dump(imagesInCache) }}
     <div class="row container-images bg-light">
         <div class="card-group">
             {% for image in imagesCollection %}
