rename path for show all edited images from 'edit-imagen' to 'edited-imagen'

--- a/www/html/test-app/templates/base.html.twig
+++ b/www/html/test-app/templates/base.html.twig
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/imagen" id="load-imagen-btn">Load Imagen</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/edit-imagen" id="edit-imagen-btn">Edit Imagen</a>
+                        <a class="nav-link" href="/edited-imagen" id="edit-imagen-btn">Edit Imagen</a>
                     </li>
                 </ul>
             </div>
