add new funcionalidad-> searcher images in ELK

--- a/www/html/test-app/templates/base.html.twig
+++ b/www/html/test-app/templates/base.html.twig
@@ -27,6 +27,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/edited-imagen" id="edit-imagen-btn">Edit Imagen</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/searcher-imagen" id="searcher-imagen-btn">Searcher Images in ELK</a>
+                    </li>
                 </ul>
             </div>
         </nav>
