--- a/www/html/test-app/templates/SearcherImages/searcherImages.html.twig
+++ b/www/html/test-app/templates/SearcherImages/searcherImages.html.twig
@@ -3,7 +3,15 @@
 {% block stylesheets %} {{ parent() }} {% endblock %}
 
 {% block body %}
-    <h1>searcher ELK</h1>
+    <div class="container input-group mb-3">
+        <input type="text" class="form-control" placeholder="search your images" aria-label="Recipient's username" aria-describedby="basic-addon2" id="search-image-elk-input">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="searcher-image-elk-btn">search</button>
+        </div>
+    </div>
+    <div class="container documents-elk-container">
+
+    </div>
 {% endblock %}
 
 {% block head_js %}
@@ -12,6 +20,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="/assets/js/ModuleLoadImage.js"></script>
+    <script type="text/javascript" src="/assets/js/SearchImageModule.js"></script>
 
 {% endblock %}
