add style to ELK searcher

--- a/www/html/test-app/assets/css/styles.css
+++ b/www/html/test-app/assets/css/styles.css
@@ -46,6 +46,6 @@
     cursor: pointer;
 }
 
-.tags-container-controller, .description-container-controller{
+.tags-container-controller, .description-container-controller, .tags-container-elk, .description-container-elk{
     margin-top: 2%;
 }
