add class row to container images

--- a/www/html/test-app/templates/SearcherImages/searcherImages.html.twig
+++ b/www/html/test-app/templates/SearcherImages/searcherImages.html.twig
@@ -9,7 +9,7 @@
             <button class="btn btn-outline-secondary" type="button" id="searcher-image-elk-btn">search</button>
         </div>
     </div>
-    <div class="container documents-elk-container">
+    <div class="container row documents-elk-container">
 
     </div>
 {% endblock %}
