--- a/www/html/test-app/templates/EditedImages/editedImages.html.twig
+++ b/www/html/test-app/templates/EditedImages/editedImages.html.twig
@@ -8,7 +8,9 @@
             {% for image in imagesCollection %}
             <div class="col-xl-4 col-md-6 col-10 mx-auto my-3">
                 <div class="card">
-                    <img class="card-img-top" src="/assets/files/{{image['image_rename']}}.{{image['image_extension']}}" alt="Card image cap">
+                    <div class="image-load-container">
+                        <img class="card-img-top image-load" src="/assets/files/{{image['image_rename']}}.{{image['image_extension']}}" alt="Card image cap">
+                    </div>
                     <div id="accordion-{{ loop.index }}">
 
                         <div class="card">
