center images in ELK

--- a/www/html/test-app/assets/css/styles.css
+++ b/www/html/test-app/assets/css/styles.css
@@ -53,3 +53,11 @@
 .image-load-container, .image-load{
     height: 300px;
 }
+
+.searcher-container{
+    border: 1px solid #dddddd;
+    border-radius: 5px;
+    box-shadow : 0 1px 4px 0 rgba(0,0,0,0.37);
+    height: 100px;
+    margin-top: 3%;
+}
