add style to button -> center

--- a/www/html/test-app/templates/LoadImages/loadImages.html.twig
+++ b/www/html/test-app/templates/LoadImages/loadImages.html.twig
@@ -8,7 +8,10 @@
             <input name="photos" type="file" multiple id="archivos">
         </div>
     </form>
-    <button type="submit" class="btn btn-dark" id="clear-photos-btn">Clear photos</button>
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-dark" id="clear-photos-btn">Send photos</button>
+    </div>
+    
 {% endblock %}
 
 {% block head_js %}
