start refactor for frontend lighthouse -> change in base template jquery for jqury minify

--- a/www/html/test-app/templates/base.html.twig
+++ b/www/html/test-app/templates/base.html.twig
@@ -44,7 +44,7 @@
         {% endblock %}
         </div>
         {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
             <script type="text/javascript" src="/assets/js/dropzone.js"></script>  
         {% endblock %}
         {% block head_js %}
